--- a/model.ipynb
+++ b/model.ipynb
@@ -1,13 +1,81 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b694f760",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Download torch and torchvision"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c43d447",
+   "id": "290cfc23",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "# pip install torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8033a919",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install torchvision"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63796d8e",
+   "metadata": {},
+   "source": [
+    "Initialization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5217f9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.data import sampler\n",
+    "\n",
+    "import torchvision.datasets as dset\n",
+    "import torchvision.transforms as T\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "USE_GPU = True\n",
+    "dtype = torch.float32 \n",
+    "if torch.cuda.is_available():\n",
+    "    print(f\"GPU: {torch.cuda.get_device_name(0)} is available.\")\n",
+    "else:\n",
+    "    print(\"No GPU available. Training will run on CPU.\")\n",
+    "\n",
+    "\n",
+    "# Constant to control how frequently we print train loss.\n",
+    "print_every = 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cb9c952",
+   "metadata": {},
+   "source": [
+    "If the output is \"using device: cpu\": download CUDA toolkit (https://developer.nvidia.com/cuda-downloads)"
    ]
   }
  ],
