--- a/model.ipynb
+++ b/model.ipynb
@@ -77,6 +77,37 @@
    "source": [
     "If the output is \"using device: cpu\": download CUDA toolkit (https://developer.nvidia.com/cuda-downloads)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "350f38c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NUM_TRAIN = 49000\n",
+    "\n",
+    "# data augmentation\n",
+    "transform = T.Compose([\n",
+    "                T.ToTensor(),\n",
+    "                T.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010))\n",
+    "            ])\n",
+    "\n",
+    "# Split dataset -> train, val, test\n",
+    "button_train = dset.button('Data/images', train=True, download=True,\n",
+    "                             transform=transform)\n",
+    "loader_train = DataLoader(button_train, batch_size=64,\n",
+    "                          sampler=sampler.SubsetRandomSampler(range(NUM_TRAIN)))\n",
+    "\n",
+    "button_val = dset.button('./cse493g1/datasets', train=True, download=True,\n",
+    "                           transform=transform)\n",
+    "loader_val = DataLoader(button_val, batch_size=64,\n",
+    "                        sampler=sampler.SubsetRandomSampler(range(NUM_TRAIN, 50000)))\n",
+    "\n",
+    "button_test = dset.button('./cse493g1/datasets', train=False, download=True,\n",
+    "                            transform=transform)\n",
+    "loader_test = DataLoader(button_test, batch_size=64)"
+   ]
   }
  ],
  "metadata": {
