--- a/augment_yolo_dataset.ipynb
+++ b/augment_yolo_dataset.ipynb
@@ -10,206 +10,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "aad46aac",
+   "execution_count": 11,
+   "id": "4dc7983d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: tqdm in c:\\users\\yuzhi\\appdata\\roaming\\python\\python312\\site-packages (4.67.1)\n",
+      "Requirement already satisfied: colorama in c:\\users\\yuzhi\\appdata\\roaming\\python\\python312\\site-packages (from tqdm) (0.4.6)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
-    "import cv2\n",
-    "import numpy as np\n",
-    "import hashlib\n",
-    "import random\n",
-    "import albumentations as A\n",
-    "from albumentations.pytorch import ToTensorV2\n",
-    "\n",
-    "INPUT_DIR = '/path/to/input'\n",
-    "OUTPUT_DIR = '/path/to/output'\n"
+    "pip install tqdm"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9a7af75",
+   "id": "67a1dc0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tqdm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 24\u001b[39m\n\u001b[32m     17\u001b[39m input_images = [\n\u001b[32m     18\u001b[39m     os.path.splitext(f)[\u001b[32m0\u001b[39m]\n\u001b[32m     19\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m os.listdir(os.path.join(aug.INPUT_DIR, \u001b[33m\"\u001b[39m\u001b[33mimages\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m     20\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m f.endswith(\u001b[33m\"\u001b[39m\u001b[33m.jpg\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     21\u001b[39m ]\n\u001b[32m     23\u001b[39m \u001b[38;5;66;03m# 对每张图进行增强\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m24\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m filename \u001b[38;5;129;01min\u001b[39;00m \u001b[43mtqdm\u001b[49m(input_images):\n\u001b[32m     25\u001b[39m     \u001b[38;5;66;03m# 1. 原图保存\u001b[39;00m\n\u001b[32m     26\u001b[39m     image, boxes, class_labels, _, _ = aug.load_image_and_boxes(filename)\n\u001b[32m     27\u001b[39m     aug.save_augmented(image, boxes, class_labels, filename)\n",
+      "\u001b[31mNameError\u001b[39m: name 'tqdm' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Helper functions\n",
-    "def load_image_and_boxes(filename):\n",
-    "    img_path = os.path.join(INPUT_DIR, \"images\", filename + \".jpg\")\n",
-    "    txt_path = os.path.join(INPUT_DIR, \"labels\", filename + \".txt\")\n",
+    "import augment_utils as aug\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "    image = cv2.imread(img_path)\n",
-    "    height, width = image.shape[:2]\n",
     "\n",
-    "    boxes = []\n",
-    "    class_labels = []\n",
-    "    with open(txt_path, 'r') as f:\n",
-    "        for line in f:\n",
-    "            cls, x, y, w, h = map(float, line.strip().split())\n",
-    "            # 转为 [x_min, y_min, x_max, y_max]\n",
-    "            xmin = (x - w / 2) * width\n",
-    "            ymin = (y - h / 2) * height\n",
-    "            xmax = (x + w / 2) * width\n",
-    "            ymax = (y + h / 2) * height\n",
-    "            boxes.append([xmin, ymin, xmax, ymax])\n",
-    "            class_labels.append(int(cls))\n",
-    "    return image, boxes, class_labels, width, height\n",
+    "aug.INPUT_DIR = 'TwoStageYOLODataset/original'\n",
+    "aug.OUTPUT_DIR = 'TwoStageYOLODataset/augmented'\n",
     "\n",
-    "def save_augmented(image, boxes, class_labels, filename):\n",
-    "    hash_code = hashlib.md5(image.tobytes()).hexdigest()[:4]\n",
-    "    new_filename = f\"{os.path.splitext(filename)[0]}-{hash_code}\"\n",
+    "AUG_FUNCTIONS = [\n",
+    "    aug.add_gaussian_noise,\n",
+    "    aug.adjust_random_brightness,\n",
+    "    aug.add_black_rect,\n",
+    "    aug.horizontal_flip,\n",
+    "    aug.random_rotate,\n",
+    "    aug.random_scale_with_padding,\n",
+    "]\n",
     "\n",
-    "    image_out_path = os.path.join(OUTPUT_DIR, 'images', new_filename + \".jpg\")\n",
-    "    label_out_path = os.path.join(OUTPUT_DIR, 'labels', new_filename + \".txt\")\n",
     "\n",
-    "    os.makedirs(os.path.dirname(image_out_path), exist_ok=True)\n",
-    "    os.makedirs(os.path.dirname(label_out_path), exist_ok=True)\n",
+    "# 获取所有图片名（不带扩展名）\n",
+    "input_images = [\n",
+    "    os.path.splitext(f)[0]\n",
+    "    for f in os.listdir(os.path.join(aug.INPUT_DIR, \"images\"))\n",
+    "    if f.endswith(\".jpg\")\n",
+    "]\n",
     "\n",
-    "    height, width = image.shape[:2]\n",
-    "    cv2.imwrite(image_out_path, image)\n",
+    "# 对每张图进行增强\n",
+    "for filename in tqdm(input_images):\n",
+    "    # 1. 原图保存\n",
+    "    image, boxes, class_labels, _, _ = aug.load_image_and_boxes(filename)\n",
+    "    aug.save_augmented(image, boxes, class_labels, filename)\n",
     "\n",
-    "    with open(label_out_path, 'w') as f:\n",
-    "        for cls, box in zip(class_labels, boxes):\n",
-    "            x_min, y_min, x_max, y_max = box\n",
-    "            # 转为YOLO格式\n",
-    "            x_center = ((x_min + x_max) / 2) / width\n",
-    "            y_center = ((y_min + y_max) / 2) / height\n",
-    "            w = (x_max - x_min) / width\n",
-    "            h = (y_max - y_min) / height\n",
-    "            f.write(f\"{cls} {x_center:.6f} {y_center:.6f} {w:.6f} {h:.6f}\\n\")\n",
+    "    # 2. 所有6选4组合增强\n",
+    "    for combo in itertools.combinations(AUG_FUNCTIONS, 4):\n",
+    "        # 从原图开始依次增强\n",
+    "        temp_filename = filename\n",
+    "        image, boxes, class_labels, _, _ = aug.load_image_and_boxes(temp_filename)\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73abaacb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add Gaussian noise\n",
-    "def add_gaussian_noise(filename):\n",
-    "    image, boxes, class_labels, _, _ = load_image_and_boxes(filename)\n",
-    "\n",
-    "    noisy = image + np.random.normal(0, 25, image.shape).astype(np.uint8)\n",
-    "    noisy = np.clip(noisy, 0, 255).astype(np.uint8)\n",
-    "\n",
-    "    save_augmented(noisy, boxes, class_labels, filename)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5240e49f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Adj Brightness\n",
-    "def adjust_random_brightness(filename):\n",
-    "    image, boxes, class_labels, _, _ = load_image_and_boxes(filename)\n",
-    "\n",
-    "    factor = random.uniform(0.5, 1.5)\n",
-    "    bright = np.clip(image.astype(np.float32) * factor, 0, 255).astype(np.uint8)\n",
-    "\n",
-    "    save_augmented(bright, boxes, class_labels, filename)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6808872e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Block out random chunk\n",
-    "\n",
-    "def add_black_rect(filename):\n",
-    "    image, boxes, class_labels, width, height = load_image_and_boxes(filename)\n",
-    "\n",
-    "    max_attempts = 10\n",
-    "    for _ in range(max_attempts):\n",
-    "        rect_w = random.randint(int(0.05 * width), int(0.2 * width))\n",
-    "        rect_h = random.randint(int(0.05 * height), int(0.2 * height))\n",
-    "        x1 = random.randint(0, width - rect_w)\n",
-    "        y1 = random.randint(0, height - rect_h)\n",
-    "        x2 = x1 + rect_w\n",
-    "        y2 = y1 + rect_h\n",
-    "\n",
-    "        overlap = False\n",
-    "        for box in boxes:\n",
-    "            xmin, ymin, xmax, ymax = box\n",
-    "            if not (x2 < xmin or x1 > xmax or y2 < ymin or y1 > ymax):\n",
-    "                overlap = True\n",
-    "                break\n",
-    "        if not overlap:\n",
-    "            image[y1:y2, x1:x2] = 0\n",
-    "            break\n",
-    "\n",
-    "    save_augmented(image, boxes, class_labels, filename)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f20087e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Horizontal flip\n",
-    "\n",
-    "def horizontal_flip(filename):\n",
-    "    image, boxes, class_labels, w, h = load_image_and_boxes(filename)\n",
-    "\n",
-    "    transform = A.Compose([\n",
-    "        A.HorizontalFlip(p=1.0),\n",
-    "    ], bbox_params=A.BboxParams(format='pascal_voc', label_fields=['class_labels']))\n",
-    "\n",
-    "    augmented = transform(image=image, bboxes=boxes, class_labels=class_labels)\n",
-    "\n",
-    "    save_augmented(augmented['image'], augmented['bboxes'], augmented['class_labels'], filename)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "925df8fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# random rotate\n",
-    "def random_rotate(filename):\n",
-    "    image, boxes, class_labels, w, h = load_image_and_boxes(filename)\n",
-    "\n",
-    "    transform = A.Compose([\n",
-    "        A.Rotate(limit=30, border_mode=cv2.BORDER_CONSTANT, value=0, p=1.0),\n",
-    "    ], bbox_params=A.BboxParams(format='pascal_voc', label_fields=['class_labels']))\n",
-    "\n",
-    "    augmented = transform(image=image, bboxes=boxes, class_labels=class_labels)\n",
-    "\n",
-    "    save_augmented(augmented['image'], augmented['bboxes'], augmented['class_labels'], filename)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33c9fd87",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# random scale\n",
-    "def random_scale_with_padding(filename):\n",
-    "    image, boxes, class_labels, w, h = load_image_and_boxes(filename)\n",
-    "\n",
-    "    transform = A.Compose([\n",
-    "        A.RandomScale(scale_limit=(0.5, 1.5), p=1.0),\n",
-    "        A.PadIfNeeded(min_height=h, min_width=w, border_mode=cv2.BORDER_CONSTANT, value=0, p=1.0),\n",
-    "    ], bbox_params=A.BboxParams(format='pascal_voc', label_fields=['class_labels']))\n",
-    "\n",
-    "    augmented = transform(image=image, bboxes=boxes, class_labels=class_labels)\n",
-    "\n",
-    "    save_augmented(augmented['image'], augmented['bboxes'], augmented['class_labels'], filename)\n"
+    "        for func in combo:\n",
+    "            # 修改函数以支持传 image/boxes/class_labels 是更复杂的工作，这里重新从文件加载（确保函数独立）\n",
+    "            func(temp_filename)  # 每个函数会自动保存带 hash 的增强版本\n"
    ]
   }
  ],
