updated augmentation script

--- a/augment_yolo_dataset.ipynb
+++ b/augment_yolo_dataset.ipynb
@@ -36,21 +36,38 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'tqdm' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 24\u001b[39m\n\u001b[32m     17\u001b[39m input_images = [\n\u001b[32m     18\u001b[39m     os.path.splitext(f)[\u001b[32m0\u001b[39m]\n\u001b[32m     19\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m os.listdir(os.path.join(aug.INPUT_DIR, \u001b[33m\"\u001b[39m\u001b[33mimages\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m     20\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m f.endswith(\u001b[33m\"\u001b[39m\u001b[33m.jpg\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     21\u001b[39m ]\n\u001b[32m     23\u001b[39m \u001b[38;5;66;03m# 对每张图进行增强\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m24\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m filename \u001b[38;5;129;01min\u001b[39;00m \u001b[43mtqdm\u001b[49m(input_images):\n\u001b[32m     25\u001b[39m     \u001b[38;5;66;03m# 1. 原图保存\u001b[39;00m\n\u001b[32m     26\u001b[39m     image, boxes, class_labels, _, _ = aug.load_image_and_boxes(filename)\n\u001b[32m     27\u001b[39m     aug.save_augmented(image, boxes, class_labels, filename)\n",
-      "\u001b[31mNameError\u001b[39m: name 'tqdm' is not defined"
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6a8f90765cf641c6a3e80882e37ef896",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/138 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Yuzhi\\OneDrive\\493Proj\\CSE493G-Project\\augment_utils.py:138: UserWarning: Argument(s) 'value' are not valid for transform Rotate\n",
+      "  A.Rotate(limit=30, border_mode=cv2.BORDER_CONSTANT, value=0, p=1.0),\n",
+      "c:\\Users\\Yuzhi\\OneDrive\\493Proj\\CSE493G-Project\\augment_utils.py:160: UserWarning: Argument(s) 'mode, cval' are not valid for transform Affine\n",
+      "  A.Affine(scale=scale_factor, fit_output=True, mode=cv2.BORDER_CONSTANT, cval=0),\n",
+      "c:\\Users\\Yuzhi\\OneDrive\\493Proj\\CSE493G-Project\\augment_utils.py:161: UserWarning: Argument(s) 'value' are not valid for transform PadIfNeeded\n",
+      "  A.PadIfNeeded(min_height=h, min_width=w, border_mode=cv2.BORDER_CONSTANT, value=0, p=1.0),\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
+    "import itertools\n",
+    "from tqdm.notebook import tqdm\n",
     "import augment_utils as aug\n",
-    "from tqdm import tqdm\n",
-    "\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
     "aug.INPUT_DIR = 'TwoStageYOLODataset/original'\n",
     "aug.OUTPUT_DIR = 'TwoStageYOLODataset/augmented'\n",
@@ -72,21 +89,41 @@
     "    if f.endswith(\".jpg\")\n",
     "]\n",
     "\n",
-    "# 对每张图进行增强\n",
-    "for filename in tqdm(input_images):\n",
-    "    # 1. 原图保存\n",
-    "    image, boxes, class_labels, _, _ = aug.load_image_and_boxes(filename)\n",
-    "    aug.save_augmented(image, boxes, class_labels, filename)\n",
+    "# # 对每张图进行增强\n",
+    "# for filename in tqdm(input_images):\n",
+    "#     # 1. 原图保存\n",
+    "#     image, boxes, class_labels, _, _ = aug.load_image_and_boxes(filename)\n",
+    "#     aug.save_augmented(image, boxes, class_labels, filename)\n",
     "\n",
-    "    # 2. 所有6选4组合增强\n",
-    "    for combo in itertools.combinations(AUG_FUNCTIONS, 4):\n",
-    "        # 从原图开始依次增强\n",
-    "        temp_filename = filename\n",
-    "        image, boxes, class_labels, _, _ = aug.load_image_and_boxes(temp_filename)\n",
+    "#     # 2. 所有6选4组合增强\n",
+    "#     for combo in itertools.combinations(AUG_FUNCTIONS, 4):\n",
+    "#         # 从原图开始依次增强\n",
+    "#         temp_filename = filename\n",
+    "#         image, boxes, class_labels, _, _ = aug.load_image_and_boxes(temp_filename)\n",
     "\n",
-    "        for func in combo:\n",
-    "            # 修改函数以支持传 image/boxes/class_labels 是更复杂的工作，这里重新从文件加载（确保函数独立）\n",
-    "            func(temp_filename)  # 每个函数会自动保存带 hash 的增强版本\n"
+    "#         for func in combo:\n",
+    "#             # 修改函数以支持传 image/boxes/class_labels 是更复杂的工作，这里重新从文件加载（确保函数独立）\n",
+    "#             func(temp_filename)  # 每个函数会自动保存带 hash 的增强版本\n",
+    "\n",
+    "\n",
+    "# 每张图像的增强逻辑，供线程调用\n",
+    "def process_one_image(filename):\n",
+    "    try:\n",
+    "        # 保存原图\n",
+    "        image, boxes, class_labels, _, _ = aug.load_image_and_boxes(filename)\n",
+    "        aug.save_augmented(image, boxes, class_labels, filename)\n",
+    "\n",
+    "        # 生成所有 6 选 4 的组合\n",
+    "        combos = list(itertools.combinations(AUG_FUNCTIONS, 4))\n",
+    "        for combo in combos:\n",
+    "            for func in combo:\n",
+    "                func(filename)  # 每个函数内部自己保存带 hash+timestamp 的结果\n",
+    "    except Exception as e:\n",
+    "        print(f\"[ERROR] {filename} failed: {e}\")\n",
+    "\n",
+    "# 使用 ThreadPoolExecutor 加速\n",
+    "with ThreadPoolExecutor(max_workers=20) as executor:\n",
+    "    list(tqdm(executor.map(process_one_image, input_images), total=len(input_images)))"
    ]
   }
  ],
