train sec model

--- a/model.ipynb
+++ b/model.ipynb
@@ -329,13 +329,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "edecc690",
    "metadata": {},
    "outputs": [],
    "source": [
     "sgdMNb = optim.SGD(model.parameters(), lr=1e-4,\n",
-    "                     momentum=0.8, nesterov=True)"
+    "                     momentum=0.8, nesterov=True)\n",
+    "adamw = optim.AdamW(model.parameters(), lr=1e-3,\n",
+    "                        weight_decay=1e-2)"
    ]
   },
   {
@@ -348,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "15fb0d2a",
    "metadata": {},
    "outputs": [
@@ -480,7 +482,7 @@
     }
    ],
    "source": [
-    "data = train(model, sgdMNb, epochs=50)"
+    "data = train(model, adamw, epochs=10)"
    ]
   },
   {
