--- a/datalabel.ipynb
+++ b/datalabel.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "4a09f508",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
     "\n",
     "class0 = 'left'\n",
     "class1 = 'right'\n",
-    "root = '`ClassificationDataset_label`'\n",
+    "root = 'ClassificationDataset_label'\n",
     "\n",
     "for c in (class0, class1):\n",
     "    img_paths = glob.glob(os.path.join(root, 'train', c, '*.*'))\n",
