processing data & train dinov2_small

--- a/augmentation.ipynb
+++ b/augmentation.ipynb
@@ -471,23 +471,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved: ClassificationDataset_label/augmentedr\\r_aug1.jpg\n",
-      "Saved: ClassificationDataset_label/augmentedr\\r_aug2.jpg\n",
-      "Saved: ClassificationDataset_label/augmentedr\\r_aug3.jpg\n",
-      "Saved: ClassificationDataset_label/augmentedr\\r_aug4.jpg\n",
-      "Saved: ClassificationDataset_label/augmentedr\\r_aug5.jpg\n",
-      "Saved: ClassificationDataset_label/augmentedr\\r_aug6.jpg\n",
-      "Saved: ClassificationDataset_label/augmentedr\\r_aug7.jpg\n",
-      "Saved: ClassificationDataset_label/augmentedr\\r_aug8.jpg\n",
-      "Saved: ClassificationDataset_label/augmentedr\\r_aug9.jpg\n",
-      "Saved: ClassificationDataset_label/augmentedr\\r_aug10.jpg\n"
+      "Saved: ClassificationDataset_label/augmentedl\\l_aug1.jpg\n",
+      "Saved: ClassificationDataset_label/augmentedl\\l_aug2.jpg\n",
+      "Saved: ClassificationDataset_label/augmentedl\\l_aug3.jpg\n",
+      "Saved: ClassificationDataset_label/augmentedl\\l_aug4.jpg\n",
+      "Saved: ClassificationDataset_label/augmentedl\\l_aug5.jpg\n",
+      "Saved: ClassificationDataset_label/augmentedl\\l_aug6.jpg\n",
+      "Saved: ClassificationDataset_label/augmentedl\\l_aug7.jpg\n",
+      "Saved: ClassificationDataset_label/augmentedl\\l_aug8.jpg\n",
+      "Saved: ClassificationDataset_label/augmentedl\\l_aug9.jpg\n",
+      "Saved: ClassificationDataset_label/augmentedl\\l_aug10.jpg\n"
      ]
     }
    ],
@@ -500,8 +500,8 @@
     "import random\n",
     "\n",
     "\n",
-    "input_path = 'ClassificationDataset_label/r.jpg'  # 原始图像路径\n",
-    "output_dir = 'ClassificationDataset_label/augmentedr'  # 输出保存路径\n",
+    "input_path = 'ClassificationDataset_label/l.jpg'  # 原始图像路径\n",
+    "output_dir = 'ClassificationDataset_label/augmentedl'  # 输出保存路径\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "\n",
