--- a/gradcam.ipynb
+++ b/gradcam.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6f0a624c",
    "metadata": {},
    "outputs": [],
@@ -79,17 +79,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "cc3448e6",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -139,20 +132,20 @@
        ")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dino = Dinov2BinaryClassifier(hidden_dim=256, dropout_prob=0.5)  \n",
-    "dino.load_state_dict(torch.load(\"Weights/dinov2_small_256_.5v3.pth\"))\n",
+    "dino.load_state_dict(torch.load(\"results/Dinov2_w_pretrain/dinov2_small_256_.5_final.pth\"))\n",
     "dino.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "0ec28913",
    "metadata": {},
    "outputs": [
@@ -164,7 +157,7 @@
        "<PIL.Image.Image image mode=RGB size=640x320>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
