--- a/generatedata/generate_data.ipynb
+++ b/generatedata/generate_data.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6ef916ac",
    "metadata": {},
    "outputs": [],
@@ -31,97 +31,90 @@
     "    head_half_width: float = 5\n",
     ") -> Image.Image:\n",
     "    \"\"\"\n",
-    "    生成一张白底黑箭头的图像，箭头主方向在 base_angle_deg 附近随机偏转 ±angle_variation_deg。\n",
+    "    Generate an image with a black arrow on a white background.\n",
+    "    The arrow's direction is randomly perturbed around base_angle_deg by ±angle_variation_deg.\n",
     "\n",
-    "    参数：\n",
-    "        width, height:  画布大小（像素）。\n",
-    "        min_length, max_length:  箭头杆（shaft）长度的随机范围（像素）。\n",
-    "        base_angle_deg:  箭头主方向（度），比如 180 表示正左。\n",
-    "        angle_variation_deg:  在主方向基础上随机偏转的幅度（度）。\n",
-    "        shaft_width:  箭头杆的线宽（像素）。\n",
-    "        head_length:  箭头头部的“长度”，从箭尖往回量（像素）。\n",
-    "        head_half_width:  箭头头部底边的半宽度（像素）。\n",
+    "    Args:\n",
+    "        width, height:  Canvas size in pixels.\n",
+    "        min_length, max_length:  Random range for arrow shaft length (in pixels).\n",
+    "        base_angle_deg:  Main arrow direction (in degrees), e.g., 180 = left.\n",
+    "        angle_variation_deg:  Angle variation range (in degrees).\n",
+    "        shaft_width:  Line width of the arrow shaft.\n",
+    "        head_length:  Length of the arrowhead (from tip backward).\n",
+    "        head_half_width:  Half-width of the arrowhead base.\n",
     "\n",
-    "    返回：\n",
-    "        一张 PIL.Image.Image 对象，背景白色，包含一支黑色箭头。\n",
+    "    Returns:\n",
+    "        A PIL.Image.Image object with white background and a black arrow.\n",
     "    \"\"\"\n",
     "    while True:\n",
-    "        # 1. 随机确定箭头长度 L 和角度 θ（弧度）\n",
+    "        # 1. Randomly determine arrow length L and direction angle θ (in radians)\n",
     "        L = random.uniform(min_length, max_length)\n",
     "        theta_deg = random.uniform(base_angle_deg - angle_variation_deg,\n",
     "                                   base_angle_deg + angle_variation_deg)\n",
     "        theta = math.radians(theta_deg)\n",
     "\n",
-    "        # 2. 根据 L 和 θ 计算方向向量 (dx, dy) 以及单位向量 (ux, uy)\n",
+    "        # 2. Compute direction vector (dx, dy) and unit vector (ux, uy)\n",
     "        dx = L * math.cos(theta)\n",
     "        dy = L * math.sin(theta)\n",
     "        dist = math.hypot(dx, dy)\n",
     "        ux = dx / dist\n",
     "        uy = dy / dist\n",
     "\n",
-    "        # 3. 计算箭头可放置的“箭尖”（head）坐标范围\n",
-    "        #    要求：箭尖 (x2, y2) 必须满足以下两条：\n",
+    "        # 3. Determine valid range for arrow tip (x2, y2)\n",
+    "        #    Requirements:\n",
     "        #      a) 0 ≤ x2 ≤ width,  0 ≤ y2 ≤ height\n",
-    "        #      b) 箭尾 (x1 = x2 - dx, y1 = y2 - dy) 也要在 [0, width]×[0, height]\n",
-    "        #    因此：\n",
-    "        #      0 ≤ x2 ≤ width\n",
-    "        #      0 ≤ x2 - dx ≤ width  →  dx ≤ x2 ≤ width + dx\n",
-    "        #    联合可得：\n",
-    "        #      x2_min = max(0, dx),  x2_max = min(width, width + dx)\n",
-    "        #\n",
-    "        #    同理 y2_min = max(0, dy),  y2_max = min(height, height + dy)\n",
+    "        #      b) Arrow tail (x1 = x2 - dx, y1 = y2 - dy) also stays within canvas\n",
     "        x2_min = max(0, dx)\n",
     "        x2_max = min(width, width + dx)\n",
     "        y2_min = max(0, dy)\n",
     "        y2_max = min(height, height + dy)\n",
     "\n",
-    "        # 如果范围无效，就重试\n",
+    "        # Retry if the range is invalid\n",
     "        if x2_min > x2_max or y2_min > y2_max:\n",
     "            continue\n",
     "\n",
-    "        # 4. 随机在可行区域内选取箭尖 (x2, y2)\n",
+    "        # 4. Randomly choose arrow tip (x2, y2) in valid region\n",
     "        x2 = random.uniform(x2_min, x2_max)\n",
     "        y2 = random.uniform(y2_min, y2_max)\n",
     "\n",
-    "        # 5. 计算箭尾 (x1, y1)\n",
+    "        # 5. Compute arrow tail (x1, y1)\n",
     "        x1 = x2 - dx\n",
     "        y1 = y2 - dy\n",
     "\n",
-    "        # 6. 计算箭头头部三角形的三个顶点\n",
-    "        #    (1) 箭尖顶点就是 (x2, y2)\n",
-    "        #    (2) 箭头底边中心(base)：base = (x2 - head_length * ux,  y2 - head_length * uy)\n",
+    "        # 6. Compute the triangle vertices of the arrowhead\n",
+    "        #    (1) Tip is (x2, y2)\n",
+    "        #    (2) Base center of the arrowhead\n",
     "        base_x = x2 - head_length * ux\n",
     "        base_y = y2 - head_length * uy\n",
     "\n",
-    "        #    (3) 计算垂直主方向的法向量 (px, py) = (-uy, ux)\n",
+    "        #    (3) Perpendicular unit vector (px, py)\n",
     "        px = -uy\n",
     "        py = ux\n",
     "\n",
-    "        #    箭头底边左右两个顶点\n",
+    "        #    Left and right base corners of the arrowhead\n",
     "        left_x  = base_x + head_half_width * px\n",
     "        left_y  = base_y + head_half_width * py\n",
     "        right_x = base_x - head_half_width * px\n",
     "        right_y = base_y - head_half_width * py\n",
     "\n",
-    "        # 7. 检查：箭尾、箭尖、以及箭头底边两个顶点是否都在画布 [0, width]×[0, height] 内\n",
+    "        # 7. Check if all points lie within the canvas\n",
     "        all_x = [x1, x2, left_x, right_x]\n",
     "        all_y = [y1, y2, left_y, right_y]\n",
     "        if (min(all_x) < 0 or max(all_x) > width or\n",
     "            min(all_y) < 0 or max(all_y) > height):\n",
-    "            # 如果任何一点跑出了边界，就重新随机\n",
     "            continue\n",
     "\n",
-    "        # 如果到这里都没问题，就跳出循环，准备绘图\n",
+    "        # If all constraints are satisfied, break and proceed to drawing\n",
     "        break\n",
     "\n",
-    "    # 8. 创建白底画布并绘制\n",
+    "    # 8. Create white canvas and draw the arrow\n",
     "    img = Image.new('RGB', (width, height), color='white')\n",
     "    draw = ImageDraw.Draw(img)\n",
     "\n",
-    "    # 绘制箭头杆（shaft）\n",
+    "    # Draw the arrow shaft\n",
     "    draw.line((x1, y1, x2, y2), fill='black', width=shaft_width)\n",
     "\n",
-    "    # 绘制箭头头部三角形\n",
+    "    # Draw the arrowhead triangle\n",
     "    draw.polygon([\n",
     "        (x2, y2),\n",
     "        (left_x, left_y),\n",
@@ -133,24 +126,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "343cd696",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 生成 20 张图片，保存为 arrow_0.png, arrow_1.png, ..., arrow_19.png\n",
     "for i in range(5):\n",
     "    img = generate_arrow_image(base_angle_deg=180, shaft_width= 5, head_length=20, head_half_width= 15)\n",
     "    img.save(f'arrow_{i}.png')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cda58df5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
